--- a/public/css/app.css
+++ b/public/css/app.css
@@ -120,6 +120,14 @@ margin-left: 4px;
   padding: 1px;
 }
 
+.table > tbody > tr > .list_td{
+  text-align: center;
+  vertical-align: middle;
+  border: 1px solid #212529;
+}
+
+
+
 /* 入力画面 */
 .input-box{
   background-color: #000033;
